<resources>
    <string name="app_name">Activity Finder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="login_text">Přihlášení</string>
    <string name="password">Heslo</string>
    <string name="email">Email</string>
    <string name="login">Přihlásit</string>
    <string name="register">Registrace</string>
    <string name="lostPassword">Zapomněl jsem heslo</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="date">Datum</string>
    <string name="date_and_time">Datum a čas</string>
    <string name="distance">Vzdálenost</string>
    <string name="type">Typ</string>
    <string name="add_activity">Add activity</string>
    <string name="google_map">google map</string>
    <string name="error_occurred">Nastala chyba</string>

    <string-array name="types">
        <item>Sport</item>
        <item>Škola</item>
        <item>Piknik</item>
        <item>Pracovní záležitost</item>
        <item>Jiné</item>
    </string-array>
    <string-array name="types_with_all">
        <item>Vše</item>
        <item>Sport</item>
        <item>Škola</item>
        <item>Piknik</item>
        <item>Pracovní záležitost</item>
        <item>Jiné</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_detail_not_exist">Aktivita neexistuje</string>
    <string name="activity_detail_name_not_found">Jméno nenalezeno</string>
    <string name="activity_detail_number_of_particiants_label">Počet účastníků</string>
    <string name="activity_detail_maximum_of_particiants_label">Maximum účastníků</string>
    <string name="author">Autor</string>
    <string name="description">Popis</string>
    <string name="activity_detail_no_description_label">Žádný popis</string>
    <string name="sign_out_label">Odhlásit se</string>
    <string name="participate_label">Zúčastnit se</string>
    <string name="own_activity_label">vlastní aktivita</string>
    <string name="activity_detail_warn_sign_out_of_own_activity">Nemůžete se odhlásit od vlastní aktivity</string>
    <string name="sign_out_info">Odhlášeno</string>
    <string name="sign_in_info">Přihlášeno</string>
    <string name="copy_buffer_info">Zkopírováno do schránky</string>
    <string name="app_url_path">http://www.activity-finder.com/</string>
    <string name="empty_email_warning">Email nemůže být prázdný</string>
    <string name="empty_password_warning">Heslo nemůže být prázdné</string>
    <string name="wrong_email_warning">Email není správný</string>
    <string name="wrong_password_warning">Heslo není správné</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="remove_own_activity">Odstranit událost</string>
    <string name="remove_own_activity_warning">Opravdu chcete odstranit událost</string>
    <string name="remove">Odstranit</string>
    <string name="not_author_info">Nejste autor aktivity</string>
    <string name="removed_info">Odstraněno</string>
    <string name="back_label">Zpět</string>
    <string name="current_location_label">Aktualni poloha</string>
    <string name="location_button_clicked_label">MyLocation button clicked</string>
    <string name="validation_error_new_activity_name">Název musí být delší jak 2 znaky</string>
    <string name="validation_info_position_selected">Pozice vybrána</string>
    <string name="validation_error_position_not_selected">Musíte vybrat pozici</string>
    <string name="validation_error_must_specify_time">Musíte zadat čas události</string>
    <string name="validation_error_dont_be_empty">Nesmí být prázdné</string>
    <string name="activity_create_info">Aktivita byla vytvořena</string>
    <string name="error">Chyba</string>
    <string name="validation_error_invalid_full_name">Zadejte jméno delší jak dva znaky</string>
    <string name="validation_error_invalid_email">Zadejte platný email</string>
    <string name="validation_error_invalid_password">Heslo musí být dlouhé min 8 znaků</string>
    <string name="validation_error_invalid_password_compare">Hesla nejsou stejná</string>
    <string name="validation_error_name_dont_changed">Nešlo změnit jméno</string>
    <string name="success_created_account">Úspěšně vytvořený účet, přihlašuji</string>
    <string name="validation_error_invalid_used_email">Email už je používán</string>
    <string name="copy_link">Kopírovat odkaz</string>
    <string name="new_activity">Nová aktivita</string>
    <string name="select_position">Vyber pozici</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="from">Od kdy</string>
    <string name="to">Do kdy</string>
    <string name="placeholder_activity_name">Název aktivity</string>
    <string name="placeholder_maximum_of_participants">Maximální počet lidí</string>
    <string name="placeholder_description">Popis akce</string>
    <string name="create_button">Vytvořit</string>
    <string name="placeholder_set_date">Nastavte časové rozmězí</string>
    <string name="open_detail">Otevřít detail</string>
    <string name="select_location">Vyberte polohu</string>
    <string name="confirm">Potvrdit</string>
    <string name="my_profile">Můj profil</string>
    <string name="placeholder_enter_name">Zadejte jméno</string>
    <string name="placeholder_enter_email">Zadjete email</string>
    <string name="placeholder_enter_password">Zadejte heslo</string>
    <string name="placeholder_enter_password_again">Zadejte heslo znovu</string>
</resources>