<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MyActivitiesFragment">

    <ImageButton
        android:id="@+id/myact_search_button"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/search"
        android:scaleType="center"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toStartOf="@+id/myact_filter_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/myact_filter_button"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/filter"
        android:scaleType="center"
        android:src="@drawable/ic_filter"
        app:layout_constraintEnd_toStartOf="@+id/myact_add_activity_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/myact_add_activity_button"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/add_activity"
        android:scaleType="center"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myact_activity_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myact_search_button" />
</androidx.constraintlayout.widget.ConstraintLayout>